Name:                selinux
Version:             0.1
Synopsis:            SELinux bindings
License:             BSD3
License-file:        LICENSE
Author:              Luite Stegeman
Maintainer:          stegeman@gmail.com
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  Exposed-modules:
    System.Linux.SELinux
  extra-libraries: selinux
  Build-depends:
    base >= 4   && < 5,
    unix >= 2.4 && < 2.6

